added run feature for linxu